# camhd_video_tools

./: FFMPEG_Snippets.md  README.md
biofouling/: .gitignore  Rakefile
lib/: constants.rb  source_video.rb
tools/: CMakeLists.txt  EveryFrame.cpp  Snippet.cpp
